--- a/public/scss/_scatter.scss
+++ b/public/scss/_scatter.scss
@@ -64,6 +64,11 @@ body {
   //
   // }
 }
+.scatterToolName{
+  font-weight:1000;
+  text-decoration: underline;
+  text-align:center;
+}
 
 /* #barGraph{
   color:red;
